    - Resampler.h, Synthesizer.h: cubic interpolation now works in
      24bit mode too. Faster method to read 24bit words on little
      endian machines (x86): replaced 3 byte reads + shifts with a 1
      unaligned 32bit read and shift
    - experimental support for MS Windows (MIDI input via MME, AUDIO
      output via ASIO)
    - made handling of SIGINT signal (Ctrl-C) a bit more robust

  * AUDIO driver:
    - added Windows ASIO low latency audio driver

  * MIDI driver:
    - added MME Windows MIDI driver

  * LSCP server:
    - added support for Windows style path / filenames, however with
      forward slash path separators instead of backslash
      (i.e. "C:/foo/bar.gig")
    - allow naughty liblscp to send non-string device parameters within
      apostrophes as well
    - added new LSCP commands: "GET FILE INSTRUMENTS <file>",
      "LIST FILE INSTRUMENTS <file>" and
      "GET FILE INSTRUMENT INFO <file> <index>" for retrieving informations
      about an arbitrary instrument file on the system where the sampler is
      running on

Version 0.5.0 (15 October 2007)

  * packaging changes:
    - config.h is not going to be installed along with liblinuxsampler's
      API header files anymore
    - only the API relevant header (and source) files will be exported to
      the Doxygen API documentation (explicitly listed in Doxyfile.in)
    - added completely new XCode project files for Mac OSX which is now
      capable to execute our autoconf environment, thus no need anymore
      to maintain the compile time configuration file (osx/version.h) for
      OSX manually (patch by Toshi Nagata)
    - fixed buggy boolean --enable-foo / --disable-foo configure script
      parameters
    - global.h now only covers global definitions that are needed for the
      C++ API header files, all implementation internal global definitions
      are now in global_private.h
    - atomic.h is not exposed to the C++ API anymore